--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@saeris/vue-spinners": "^1.0.8",
+    "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
     "numeral": "^2.0.6",
     "tailwindcss": "^1.1.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.5"
+    "vue-chartkick": "^0.6.0",
+    "vue-router": "^3.1.5",
+    "vue-spinner": "^1.0.3"
   },
   "devDependencies": {
     "@ianaya89/vue-cli-plugin-tailwind": "^1.0.2",
